# sandbox

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
crate/: CHANGELOG.md  Cargo.toml
crate/src/: lib.rs
npm/: .gitignore  package.json
npm/__tests__/: path.test.ts  test.ts
npm/src/: getBinary.ts  utils.ts
