[package]
name = "unc-sandbox-utils"
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/utility/sandbox"
description = """
Utility library for launching utility sandbox environments.
"""

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["process"] }
binary-install = "0.3.0"
chrono = "0.4"
fs2 = "0.4"
home = "0.5.5"

[features]
global_install = []
